--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "sort-by": "^1.2.0"
