--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/render": "^3.2.4",
     "@smastrom/react-rating": "^1.3.1",
     "bootstrap": "^5.2.3",
     "firebase": "^9.21.0",
@@ -20,10 +21,9 @@
     "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.0",
     "react-toastify": "^9.1.2",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
